--- a/src/main/resources/templates/lk/index-user.html
+++ b/src/main/resources/templates/lk/index-user.html
@@ -20,10 +20,7 @@
         <div class="menu">
           <ul class="d-flex align-items-center md:justify-center bg-green py-3">
             <li><a class="dropdown-item" href="/">Главная</a></li>
-            <li><a class="dropdown-item" href="/lk">Личный кабинет</a></li>
-            <li>
-              <a class="dropdown-item" href="/registration">Регистрация</a>
-            </li>
+            <li><a class="dropdown-item" href="/account">Личный кабинет</a></li>
             <li>
               <a class="dropdown-item" href="/new-point"
                 >Добавить новую точку</a
@@ -71,7 +68,7 @@
             Cтатус
           </div>
         </div>
-        <a href="/card-page" class="no-underline w-full">
+        <a href="/point-card" class="no-underline w-full">
           <div class="table-row-custom flex align-items-center px-2 py-1">
             <div id="pointName" class="w-full font-light px-2 no-underline">
               Точка Lorem ipsum dolor sit amet, consectetur adipisicing elit.
