--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -42,16 +42,25 @@
     font-weight: 700;
 }
 #map {
-    margin: 3rem 1rem ;
+    /* поменял margin */
+    margin: 1rem .5rem;
     max-height: 500px!important;
     max-width: 100%!important;
     width: 100%!important;
     height: 400px!important;
 }
+
+#map_full{
+    max-height: 100%!important;
+    max-width: 100%!important;
+    width: 100%!important;
+    height: 100%!important;
+}
 /*#map iframe {*/
 /*    width: 100%!important;*/
 /*    height: 400px!important;*/
 /*}*/
+
 #profileImg img {
     background-color: var(--bs-white);
     width: 40px;
@@ -107,13 +116,14 @@ input {
     font-size: 1.25rem;
     line-height: 1.75rem;
 }
-header::-webkit-scrollbar {
-    display: none;
-}
 .table-wrapper {
     border: 2px solid var(--bs-gray);
     border-radius: .5rem;
 }
+header::-webkit-scrollbar {
+    display: none;
+}
+
 .table-header {
     box-shadow: 0px 2px 2px 0px #00000040;
 }
@@ -147,8 +157,6 @@ select {
     background-position: top 55% right 1rem;
     min-width: 100px;
 }
-
-
 
 @media screen and (min-width: 997px) {
 
@@ -186,4 +194,79 @@ select {
         color: var(--bs-black);
     }
 
+}
+
+/* новые правки */
+/*.one-photo {*/
+/*    max-height: 500px;*/
+/*}*/
+.one-photo img, .two-photo img {
+    width: 100%;
+    object-fit: cover;
+    height: auto;
+}
+/*.one-photo img {*/
+/*    !* для максимальной высоты одинарной фотки *!*/
+/*    max-height: 500px;*/
+/*    !* для соотношения сторон одинарной фотки *!*/
+/*    aspect-ratio: 24 / 9;*/
+/*}*/
+.two-photo img {
+    /* для максимальной высоты двойной фотки */
+    max-height: 500px;
+    /* для соотношения сторон двойной фотки */
+    aspect-ratio: 1 / 1;
+}
+
+.message-no-input {
+    border: 2px solid var(--bs-black);
+    padding: .5rem 1rem!important;
+    border-radius: .5rem;
+}
+#userSearch {
+    border: none;
+    padding: 0;
+}
+input[type="submit"] {
+    border: none;
+    padding: 0;
+}
+
+.modal {
+    background-color: #00000069;
+    backdrop-filter: blur(10px);
+}
+.modal-body {
+    position: relative;
+    margin: 0 auto;
+    margin-top: 5rem;
+    width: 50%;
+    background-color: #ffffff;
+    border-radius: 1rem;
+    padding: 1rem;
+}
+
+.close__X {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: -2rem;
+    right: -2rem;
+}
+.X-left {
+    position: absolute;
+    display: inline-block;
+    width: 30px;
+    height: 5px;
+    background-color: #cecece;
+    transform: rotate(45deg);
+}
+.X-right {
+    position: absolute;
+    display: inline-block;
+    width: 30px;
+    height: 5px;
+    background-color: #cecece;
+    transform: rotate(-45deg);
 }
