--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -4,28 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Map with Points</title>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-        }
-        #map {
-            width: 100%;
-            height: 100%;
-        }
-    </style>
+    <script src="/jquery.js"></script>
+    <link rel="stylesheet" href="/bootstrap.css" />
+    <script src="/tailwindcss.js"></script>
+    <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
-    <div id="map"></div>
+<header class="bg-green overflow-scroll">
+    <div class="container-md">
+        <div class="menu">
+            <ul class="d-flex align-items-center md:justify-center bg-green py-3">
+                <li><a class="dropdown-item" href="/">Главная</a></li>
+                <li><a class="dropdown-item" href="/lk">Личный кабинет</a></li>
+                <li>
+                    <a class="dropdown-item" href="/new-point"
+                    >Добавить новую точку</a
+                    >
+                </li>
+                <li><a class="dropdown-item" href="/map">Карта</a></li>
+                <li id="profileImg">
+                    <a class="dropdown-item" href="/profile"
+                    ><img src="/img/account_circle.svg" alt=""
+                    /></a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</header>
+<div id="map_full"></div>
 </body>
 <script src="https://api-maps.yandex.ru/2.1/?apikey=cde97d8a-7675-4dd5-90c2-f7ee6e1eaec6&lang=ru_RU" type="text/javascript"></script>
 <script>
     var map;
     ymaps.ready(function() {
-        map = new ymaps.Map('map', {
+        map = new ymaps.Map('map_full', {
             center: [55, 34],
             zoom: 10
         }, {
@@ -54,35 +66,35 @@
                 });
                 const groupedPoints = {};
                 data.forEach(point => {
-                if (point.cluster !== -1) {
-                    if (!groupedPoints[point.cluster]) {
-                        groupedPoints[point.cluster] = [];
+                    if (point.cluster !== -1) {
+                        if (!groupedPoints[point.cluster]) {
+                            groupedPoints[point.cluster] = [];
+                        }
+                        groupedPoints[point.cluster].push(point);
                     }
-                    groupedPoints[point.cluster].push(point);
-                }
-            });
-
-            // Построение фигур для каждой группы точек
-            Object.values(groupedPoints).forEach(clusterPoints => {
-                // Фильтрация точек в группе: оставляем только те, у которых place !== -1
-                const filteredPoints = clusterPoints.filter(point => point.place !== -1);
-                // Сортировка точек по place
-                filteredPoints.sort((a, b) => a.place - b.place);
-                // Получение координат вершин для построения фигуры
-                const coordinates = filteredPoints.map(point => [point.longitude, point.latitude]);
-                // Построение фигуры
-                const polygon = new ymaps.Polygon([coordinates], {}, {
-                    fillColor: '#d35a5a',
-                    strokeColor: '#e30909',
-                    opacity: 0.5,
-                    strokeWidth: 2
                 });
-                map.geoObjects.add(polygon);
+
+                // Построение фигур для каждой группы точек
+                Object.values(groupedPoints).forEach(clusterPoints => {
+                    // Фильтрация точек в группе: оставляем только те, у которых place !== -1
+                    const filteredPoints = clusterPoints.filter(point => point.place !== -1);
+                    // Сортировка точек по place
+                    filteredPoints.sort((a, b) => a.place - b.place);
+                    // Получение координат вершин для построения фигуры
+                    const coordinates = filteredPoints.map(point => [point.longitude, point.latitude]);
+                    // Построение фигуры
+                    const polygon = new ymaps.Polygon([coordinates], {}, {
+                        fillColor: '#d35a5a',
+                        strokeColor: '#e30909',
+                        opacity: 0.5,
+                        strokeWidth: 2
+                    });
+                    map.geoObjects.add(polygon);
+                });
+            })
+            .catch(error => {
+                console.error('Error fetching points:', error);
             });
-        })
-        .catch(error => {
-            console.error('Error fetching points:', error);
-        });
     });
 
 </script>
