дизайн точек для обычного юзера

--- a/src/main/resources/templates/lk/card-page/index-opened.html
+++ b/src/main/resources/templates/lk/card-page/index-opened.html
@@ -48,7 +48,7 @@
                     <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
                     <span class="my-1 block w-full message-no-input">Название</span>
 
-                     <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
+                    <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
                 </div>
                 <div class="card-text my-3 card-description">
                     <label for="card_name block">Описание</label>
@@ -57,22 +57,48 @@
 
                     <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
                 </div>
+                <div class="card-text my-3 card-description">
+                    <label for="card_name block">Комментарий от администратора</label>
+                    <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
+                    <span class="my-1 block w-full message-no-input">Комментарий от администратора</span>
+
+                    <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
+                </div>
             </div>
             <!-- КОНЕЦ ЛЕВОЙ СЕКЦИИ ИНФОРМАЦИИ О КАРТОЧКЕ ТОЧКИ -->
 
-            <!-- НАЧАЛО СРЕДНЕЙ СЕКЦИИ ИНФОРМАЦИИ О КАРТОЧКЕ ТОЧКИ -->
-            <div class="central-side flex flex-col   md:w-3/12 w-full offset-md-4">
+            <!--        &lt;!&ndash; НАЧАЛО СРЕДНЕЙ СЕКЦИИ ИНФОРМАЦИИ О КАРТОЧКЕ ТОЧКИ &ndash;&gt;-->
+            <!--        <div class="central-side flex flex-col flex md:w-3/12 w-full">-->
+            <!--            <div class="card-text mt-3">-->
+            <!--                <label for="card_name block">Дата открытия</label>-->
+            <!--                &lt;!&ndash; НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ &ndash;&gt;-->
+            <!--                <span class="my-1 block w-full message-no-input">19.04.2002</span>-->
+
+            <!--                &lt;!&ndash; НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ &ndash;&gt;-->
+            <!--            </div>-->
+            <!--        </div>-->
+            <!--        &lt;!&ndash; КОНЕЦ СРЕДНЕЙ СЕКЦИИ ИНФОРМАЦИИ О КАРТОЧКЕ ТОЧКИ &ndash;&gt;-->
+
+            <!-- НАЧАЛО ПРАВОЙ СЕКЦИИ ИНФОРМАЦИИ О КАРТОЧКЕ ТОЧКИ -->
+            <div class="left-side flex offset-md-4 justify-content-end flex-col md:w-3/12 w-full">
                 <div class="card-text mt-3 card-status">
                     <label for="card_name block">Статус</label>
                     <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
                     <span class="my-1 block w-full message-no-input">Открыта</span>
 
-                     <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
+                    <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
                 </div>
-                <div class="card-text mt-3 card-date-open">
+                <div class="card-text mt-3">
                     <label for="card_name block">Дата открытия</label>
                     <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
-                    <span class="my-1 block w-full message-no-input">Открыта</span>
+                    <span class="my-1 block w-full message-no-input">19.04.2002</span>
+
+                    <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
+                </div>
+                <div class="card-text mt-3 card-date-open">
+                    <label for="card_name block">Дата закрытия</label>
+                    <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
+                    <span class="my-1 block w-full message-no-input">19.04.2021</span>
 
                     <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
                 </div>
@@ -92,7 +118,7 @@
         <!-- НАЧАЛО ОДИНАРНОЙ ФОТОГРАФИИ -->
         <div class="one-photo-wrapper">
             <div class="map-title my-3 md:my-10 font-semibold text-2xl md:text-4xl">Фотография точки</div>
-            <div class="one-photo card-img">
+            <div class="one-photo card-img-user">
                 <img src="" alt="">
             </div>
         </div>
