--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,7 +30,9 @@
                         <li><a class="dropdown-item" href="/account">Личный кабинет</a></li>
                         <li><a class="dropdown-item" href="/new-point">Добавить новую точку</a></li>
                         <li><a class="dropdown-item" href="/map">Карта</a></li>
-                        <li id="profileImg"><a class="dropdown-item" href="/profile"><img src="/img/account_circle.svg" alt=""></a></li>
+                        <li id="profileImg"><a class="dropdown-item" href="/profile">
+                            <img src="/img/account_circle.svg" alt=""></a>
+                        </li>
                     </ul>
                 </div>
         </div>
