--- a/src/main/resources/templates/lk/card-page-admin/card-from-user.html
+++ b/src/main/resources/templates/lk/card-page-admin/card-from-user.html
@@ -18,7 +18,7 @@
     <div class="container-md">
         <div class="menu">
             <ul class="d-flex align-items-center md:justify-center bg-green py-3">
-                <li><a class="dropdown-item" href="/static">Главная</a></li>
+                <li><a class="dropdown-item" href="/">Главная</a></li>
                 <li><a class="dropdown-item" href="/lk">Личный кабинет</a></li>
                 <li>
                     <a class="dropdown-item" href="/new-point"
@@ -57,11 +57,12 @@
 
                 <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
             </div>
+
         </div>
         <!-- КОНЕЦ ЛЕВОЙ СЕКЦИИ ИНФОРМАЦИИ О КАРТОЧКЕ ТОЧКИ -->
 
         <!-- НАЧАЛО СРЕДНЕЙ СЕКЦИИ ИНФОРМАЦИИ О КАРТОЧКЕ ТОЧКИ -->
-        <div class="central-side flex flex-col   md:w-3/12 w-full offset-md-4">
+        <div class="central-side flex flex-col   md:w-3/12 w-full offset-md-4 justify-content-end">
             <div class="card-text mt-3 card-status">
                 <label for="card_name block">Статус</label>
                 <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
@@ -92,57 +93,18 @@
     <!-- НАЧАЛО ОДИНАРНОЙ ФОТОГРАФИИ -->
     <div class="one-photo-wrapper">
         <div class="map-title my-3 md:my-10 font-semibold text-2xl md:text-4xl">Фотография точки</div>
-        <div class="one-photo card-img">
+        <div class="one-photo card-img-user">
             <img src="" alt="">
         </div>
     </div>
     <!-- КОНЕЦ ОДИНАРНОЙ ФОТОГРАФИИ  -->
     <!-- КОНЕЦ ЗАГРУЗКИ ФОТОГРАФИИ  -->
-
+    <div class="mt-2 button-row flex flex-col md:flex-row mt-4  ">
+        <a class="md:!mt-0 block md:w-1/2 text-center rounded-xl py-2 md:!py-1 md:mx-auto bg-red text-white mb-1 md:!mb-0 text-md md:text-md md:me-1" id="reject-point-user">Отклонить</a>
+        <a class="flex align-items-center justify-center px-1 py-2 md:!py-1  md:w-1/2 text-center mt-1 md:!mt-0 rounded-xl  bg-green text-white text-md md:text-md md:ml-2 " id="aprove-point-user">Верифицировать</a>
+    </div>
 </div>
 <!-- КОНЕЦ КАРТОЧКИ ТОЧКИ  C ВВОДОМ ДАННЫХ-->
-<script src="/main.js"></script>
-
-<form id="uploadForm" enctype="multipart/form-data" method="post">
-    <input type="file" id="fileInput" name="file">
-    <button id="getLocationButton" type="submit">закрыть точку</button>
-</form>
-<script>
-    var button = document.getElementById('uploadForm');
-    button.addEventListener('submit', function (event) {
-        event.preventDefault(); // Предотвращаем отправку формы по умолчанию
-        ymaps.geolocation.get({
-            mapStateAutoApply: true,
-            provider: 'browser'
-        }).then(function (result) {
-            var formData = new FormData(); // Создаем объект FormData
-            var fileInput = document.getElementById('fileInput');
-            formData.append('file', fileInput.files[0]); // Добавляем выбранный файл в FormData
-            const urlParams = new URLSearchParams(window.location.search);
-            const pointId = urlParams.get('id');
-            fetch('/api/v1/point/' + pointId + '/close', {
-                    method: 'POST',
-                    // headers: {
-                    //     'Content-Type': 'application/json'
-                    // },
-                    body: formData
-                }
-            )
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error(response.status);
-                    }
-                    return response.text();
-                })
-                .then(data => {
-                    // Обработка успешного ответа
-                    alert(data); // Всплывающее окно с сообщением
-                })
-                .catch(error => {
-                    alert('Error: ' + error); // Всплывающее окно с сообщением об ошибке
-                });
-        });
-    });
-</script>
+<script src="/admin-point-card-from-user.js"></script>
 </body>
 </html>
