--- a/src/main/resources/templates/lk/card-page-user/index-closed.html
+++ b/src/main/resources/templates/lk/card-page-user/index-closed.html
@@ -28,7 +28,7 @@
                 <li><a class="dropdown-item" href="/map">Карта</a></li>
                 <li id="profileImg">
                     <a class="dropdown-item" href="/profile"
-                    ><img src="/img/account_circle.svg" alt=""
+                    ><img src="/img/account_circle.svg" id="userAvatarMenu" alt=""
                     /></a>
                 </li>
             </ul>
@@ -88,10 +88,10 @@
 
                 <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
             </div>
-            <div class="card-text mt-3">
+            <div class="card-text mt-3 card-date-open">
                 <label for="card_name block">Дата открытия</label>
                 <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
-                <span class="my-1 block w-full message-no-input">19.04.2002</span>
+                <span class="my-1 block w-full message-no-input ">19.04.2002</span>
 
                 <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
             </div>
