--- a/src/main/resources/templates/lk/card-page-user/index-opened.html
+++ b/src/main/resources/templates/lk/card-page-user/index-opened.html
@@ -28,7 +28,7 @@
                 <li><a class="dropdown-item" href="/map">Карта</a></li>
                 <li id="profileImg">
                     <a class="dropdown-item" href="/profile"
-                    ><img src="/img/account_circle.svg" alt=""
+                    ><img src="/img/account_circle.svg" id="userAvatarMenu" alt=""
                     /></a>
                 </li>
             </ul>
@@ -62,7 +62,7 @@
         <!-- КОНЕЦ ЛЕВОЙ СЕКЦИИ ИНФОРМАЦИИ О КАРТОЧКЕ ТОЧКИ -->
 
         <!-- НАЧАЛО СРЕДНЕЙ СЕКЦИИ ИНФОРМАЦИИ О КАРТОЧКЕ ТОЧКИ -->
-        <div class="central-side flex flex-col   md:w-3/12 w-full offset-md-4">
+        <div class="central-side flex flex-col   md:w-3/12 w-full offset-md-4 justify-content-end">
             <div class="card-text mt-3 card-status">
                 <label for="card_name block">Статус</label>
                 <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
