--- a/src/main/resources/templates/lk/index-user.html
+++ b/src/main/resources/templates/lk/index-user.html
@@ -29,7 +29,7 @@
             <li><a class="dropdown-item" href="/map">Карта</a></li>
             <li id="profileImg">
               <a class="dropdown-item" href="/profile"
-                ><img src="/img/account_circle.svg" alt=""
+                ><img src="/img/account_circle.svg" id="userAvatarMenu" alt=""
               /></a>
             </li>
           </ul>
