--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -7,7 +7,8 @@
     <script src="/jquery.js"></script>
     <link rel="stylesheet" href="/bootstrap.css" />
     <script src="/tailwindcss.js"></script>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/style_exception.css" />
+
 </head>
 <body>
 <header class="bg-green overflow-scroll">
@@ -24,78 +25,17 @@
                 <li><a class="dropdown-item" href="/map">Карта</a></li>
                 <li id="profileImg">
                     <a class="dropdown-item" href="/profile"
-                    ><img src="/img/account_circle.svg" alt=""
+                    ><img src="/img/account_circle.svg" id="userAvatarMenu" alt=""
                     /></a>
                 </li>
             </ul>
         </div>
     </div>
 </header>
-<div id="map_full"></div>
+<div id="map">
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=cde97d8a-7675-4dd5-90c2-f7ee6e1eaec6&lang=ru_RU" type="text/javascript"></script>
+</div>
+
+<script src="/map_full.js"></script>
 </body>
-<script src="https://api-maps.yandex.ru/2.1/?apikey=cde97d8a-7675-4dd5-90c2-f7ee6e1eaec6&lang=ru_RU" type="text/javascript"></script>
-<script>
-    var map;
-    ymaps.ready(function() {
-        map = new ymaps.Map('map_full', {
-            center: [55, 34],
-            zoom: 10
-        }, {
-            searchControlProvider: 'yandex#search'
-        });
-
-        var geolocation = ymaps.geolocation;
-        geolocation.get({
-            provider: 'browser',
-            mapStateAutoApply: true
-        }).then(function(result) {
-            result.geoObjects.options.set('preset', 'islands#redCircleIcon');
-            map.geoObjects.add(result.geoObjects);
-        });
-
-        fetch('/api/v1/points')
-            .then(response => response.json())
-            .then(data => {
-                data.forEach(point => {
-                    var coordinates = [point.longitude, point.latitude];
-                    var placemark;
-                    placemark = new ymaps.Placemark(coordinates, {}, {
-                        preset: 'islands#blueCircleDotIcon'
-                    });
-                    map.geoObjects.add(placemark);
-                });
-                const groupedPoints = {};
-                data.forEach(point => {
-                    if (point.cluster !== -1) {
-                        if (!groupedPoints[point.cluster]) {
-                            groupedPoints[point.cluster] = [];
-                        }
-                        groupedPoints[point.cluster].push(point);
-                    }
-                });
-
-                // Построение фигур для каждой группы точек
-                Object.values(groupedPoints).forEach(clusterPoints => {
-                    // Фильтрация точек в группе: оставляем только те, у которых place !== -1
-                    const filteredPoints = clusterPoints.filter(point => point.place !== -1);
-                    // Сортировка точек по place
-                    filteredPoints.sort((a, b) => a.place - b.place);
-                    // Получение координат вершин для построения фигуры
-                    const coordinates = filteredPoints.map(point => [point.longitude, point.latitude]);
-                    // Построение фигуры
-                    const polygon = new ymaps.Polygon([coordinates], {}, {
-                        fillColor: '#d35a5a',
-                        strokeColor: '#e30909',
-                        opacity: 0.5,
-                        strokeWidth: 2
-                    });
-                    map.geoObjects.add(polygon);
-                });
-            })
-            .catch(error => {
-                console.error('Error fetching points:', error);
-            });
-    });
-
-</script>
 </html>
