--- a/src/main/resources/static/style_exception.css
+++ b/src/main/resources/static/style_exception.css
@@ -32,6 +32,9 @@
     box-sizing: border-box;
 }
 
+body {
+    overflow: hidden!important;
+}
 .menu ul{
     list-style-type: none;
     padding-left: 0;
@@ -43,11 +46,8 @@
 }
 #map{
     /* поменял margin */
-    margin: 1rem 0;
-    max-height: 500px;
-    max-width: 100%;
-    width: 100%;
-    height: 400px;
+    max-height: 100vh;
+    min-height: 100vh;
 }
 
 #map iframe {
