--- a/src/main/resources/templates/lk/card-page-admin/card-from-worker.html
+++ b/src/main/resources/templates/lk/card-page-admin/card-from-worker.html
@@ -18,7 +18,7 @@
     <div class="container-md">
         <div class="menu">
             <ul class="d-flex align-items-center md:justify-center bg-green py-3">
-                <li><a class="dropdown-item" href="/static">Главная</a></li>
+                <li><a class="dropdown-item" href="/">Главная</a></li>
                 <li><a class="dropdown-item" href="/lk">Личный кабинет</a></li>
                 <li>
                     <a class="dropdown-item" href="/new-point"
@@ -57,11 +57,30 @@
 
                 <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
             </div>
+            <div class="card-text my-3 card-description">
+                <label for="card_name block">Комментарий от администратора</label>
+                <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
+                <span class="my-1 block w-full message-no-input">Комментарий от администратора</span>
+
+                <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
+            </div>
         </div>
         <!-- КОНЕЦ ЛЕВОЙ СЕКЦИИ ИНФОРМАЦИИ О КАРТОЧКЕ ТОЧКИ -->
 
-        <!-- НАЧАЛО СРЕДНЕЙ СЕКЦИИ ИНФОРМАЦИИ О КАРТОЧКЕ ТОЧКИ -->
-        <div class="central-side flex flex-col   md:w-3/12 w-full offset-md-4">
+        <!--        &lt;!&ndash; НАЧАЛО СРЕДНЕЙ СЕКЦИИ ИНФОРМАЦИИ О КАРТОЧКЕ ТОЧКИ &ndash;&gt;-->
+        <!--        <div class="central-side flex flex-col flex md:w-3/12 w-full">-->
+        <!--            <div class="card-text mt-3">-->
+        <!--                <label for="card_name block">Дата открытия</label>-->
+        <!--                &lt;!&ndash; НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ &ndash;&gt;-->
+        <!--                <span class="my-1 block w-full message-no-input">19.04.2002</span>-->
+
+        <!--                &lt;!&ndash; НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ &ndash;&gt;-->
+        <!--            </div>-->
+        <!--        </div>-->
+        <!--        &lt;!&ndash; КОНЕЦ СРЕДНЕЙ СЕКЦИИ ИНФОРМАЦИИ О КАРТОЧКЕ ТОЧКИ &ndash;&gt;-->
+
+        <!-- НАЧАЛО ПРАВОЙ СЕКЦИИ ИНФОРМАЦИИ О КАРТОЧКЕ ТОЧКИ -->
+        <div class="left-side flex offset-md-4 justify-content-end flex-col md:w-3/12 w-full">
             <div class="card-text mt-3 card-status">
                 <label for="card_name block">Статус</label>
                 <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
@@ -72,7 +91,14 @@
             <div class="card-text mt-3 card-date-open">
                 <label for="card_name block">Дата открытия</label>
                 <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
-                <span class="my-1 block w-full message-no-input">Открыта</span>
+                <span class="my-1 block w-full message-no-input">19.04.2002</span>
+
+                <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
+            </div>
+            <div class="card-text mt-3 card-date-open">
+                <label for="card_name block">Дата закрытия</label>
+                <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
+                <span class="my-1 block w-full message-no-input">19.04.2021</span>
 
                 <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
             </div>
@@ -90,59 +116,29 @@
     <!-- КОНЕЦ КАРТЫ -->
 
     <!-- НАЧАЛО ОДИНАРНОЙ ФОТОГРАФИИ -->
-    <div class="one-photo-wrapper">
-        <div class="map-title my-3 md:my-10 font-semibold text-2xl md:text-4xl">Фотография точки</div>
-        <div class="one-photo card-img">
+    <div class="one-photo-wrapper user-photo">
+        <div class="map-title my-3 md:my-10 font-semibold text-2xl md:text-4xl">Ваше фото</div>
+        <div class="one-photo card-img-user">
+            <img src="" alt="">
+        </div>
+    </div>
+    <!-- КОНЕЦ ОДИНАРНОЙ ФОТОГРАФИИ  -->
+    <!-- НАЧАЛО ОДИНАРНОЙ ФОТОГРАФИИ -->
+    <div class="one-photo-wrapper worker-photo">
+        <div class="map-title my-3 md:my-10 font-semibold text-2xl md:text-4xl">Фото работника</div>
+        <div class="one-photo card-img-worker">
             <img src="" alt="">
         </div>
     </div>
     <!-- КОНЕЦ ОДИНАРНОЙ ФОТОГРАФИИ  -->
     <!-- КОНЕЦ ЗАГРУЗКИ ФОТОГРАФИИ  -->
 
+    <div class="mt-2 button-row flex flex-col md:flex-row mt-4  ">
+        <button class="md:!mt-0 block md:w-1/2 text-center rounded-xl py-2 md:!py-1 md:mx-auto bg-red text-white mb-1 md:!mb-0 text-md md:text-md md:me-1" id="reject-point-worker">Отклонить</button>
+        <button class="flex align-items-center justify-center px-1 py-2 md:!py-1  md:w-1/2 text-center mt-1 md:!mt-0 rounded-xl  bg-green text-white text-md md:text-md md:ml-2 " id="aprove-point-worker">Верифицировать</button>
+    </div>
 </div>
 <!-- КОНЕЦ КАРТОЧКИ ТОЧКИ  C ВВОДОМ ДАННЫХ-->
-<script src="/main.js"></script>
-
-<form id="uploadForm" enctype="multipart/form-data" method="post">
-    <input type="file" id="fileInput" name="file">
-    <button id="getLocationButton" type="submit">закрыть точку</button>
-</form>
-<script>
-    var button = document.getElementById('uploadForm');
-    button.addEventListener('submit', function (event) {
-        event.preventDefault(); // Предотвращаем отправку формы по умолчанию
-        ymaps.geolocation.get({
-            mapStateAutoApply: true,
-            provider: 'browser'
-        }).then(function (result) {
-            var formData = new FormData(); // Создаем объект FormData
-            var fileInput = document.getElementById('fileInput');
-            formData.append('file', fileInput.files[0]); // Добавляем выбранный файл в FormData
-            const urlParams = new URLSearchParams(window.location.search);
-            const pointId = urlParams.get('id');
-            fetch('/api/v1/point/' + pointId + '/close', {
-                    method: 'POST',
-                    // headers: {
-                    //     'Content-Type': 'application/json'
-                    // },
-                    body: formData
-                }
-            )
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error(response.status);
-                    }
-                    return response.text();
-                })
-                .then(data => {
-                    // Обработка успешного ответа
-                    alert(data); // Всплывающее окно с сообщением
-                })
-                .catch(error => {
-                    alert('Error: ' + error); // Всплывающее окно с сообщением об ошибке
-                });
-        });
-    });
-</script>
+<script src="/admin-point-card-from-worker.js"></script>
 </body>
 </html>
