--- a/src/main/resources/templates/lk/index-admin.html
+++ b/src/main/resources/templates/lk/index-admin.html
@@ -29,7 +29,7 @@
               <li><a class="dropdown-item" href="/map">Карта</a></li>
               <li id="profileImg">
                 <a class="dropdown-item" href="/profile"
-                  ><img src="/img/account_circle.svg" alt=""
+                  ><img src="/img/account_circle.svg" id="userAvatarMenu" alt=""
                 /></a>
               </li>
             </ul>
@@ -138,9 +138,9 @@
       <div class="container-md table-title mt-5">
         <div class="flex flex-col justify-between md:flex-row">
           <div class="text-title md:w-1/2 w-full md:text-3xl text-xl">СПИСОК ТОЧЕК</div>
-          <div class="search-title message-no-input flex flex-col justify-end md:flex-row md:inline-block md:w-auto  w-full md:text-3xl text-xl md:mx-2">
-            <form action="" id="searchPointsForm" class="inline-block flex  text-xl flex-col justify-end md:flex-row">
-              <select class="border-none min-w-[200px] focus:outline-0" name="PointsByRole" id="PointsByRole">
+          <div class="search-title message-no-input flex flex-col justify-end md:flex-row md:inline-block md:w-1/2 w-full md:text-3xl text-xl md:mx-2">
+            <form action="" id="searchPointsForm" class=" flex w-full text-xl flex-col justify-between md:flex-row">
+              <select class="border-none w-full focus:outline-0" name="PointsByRole" id="PointsByRole">
                 <option value="">Выберете роль</option>
                 <option value="user">Юзер</option>
                 <option value="worker">Работник</option>
