--- a/src/main/resources/templates/lk/index-admin.html
+++ b/src/main/resources/templates/lk/index-admin.html
@@ -52,13 +52,13 @@
       </form>
       <div class="change-name-wrapper text-center my-2">
         <span class="name text-xl font-semibold" id="userName"
-          >Анастасия Максимова</span
+          >Филина Ольга</span
         >
         <input
           id="nameChanger"
           type="text"
           placeholder="Ваше Имя"
-          value="Анастасия Максимова"
+          value="Филина Ольга"
           class="hidden"
         />
         <img class="inline edit" id="edit" src="/img/edit.svg" alt="" />
