--- a/src/main/resources/templates/lk/index-user.html
+++ b/src/main/resources/templates/lk/index-user.html
@@ -47,8 +47,8 @@
              </label>
         </form>
       <div class="change-name-wrapper text-center my-2">
-        <span class="name text-xl font-semibold" id="userName">Анастасия Максимова</span>
-        <input id="nameChanger" type="text" placeholder="Ваше Имя" value="Анастасия Максимова" class="hidden" >
+        <span class="name text-xl font-semibold" id="userName">Филина Ольга</span>
+        <input id="nameChanger" type="text" placeholder="Ваше Имя" value="Филина Ольга" class="hidden" >
         <img class="inline edit" id="edit" src="/img/edit.svg" alt="">
         <img class="inline hidden done" id="done" src="/img/done.svg" alt="">
       </div>
